src/test/ui/raw-ref-op/raw-ref-temp-deref.stderr
error: raw borrows are not yet implemented
  --> $DIR/raw-ref-temp-deref.rs:13:21
   |
LL |     let deref_ref = &raw const *PAIR_REF;
   |                     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: raw borrows are not yet implemented
  --> $DIR/raw-ref-temp-deref.rs:14:27
   |
LL |     let field_deref_ref = &raw const PAIR_REF.0;
   |                           ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: raw borrows are not yet implemented
  --> $DIR/raw-ref-temp-deref.rs:15:21
   |
LL |     let deref_ref = &raw const *ARRAY_REF;
   |                     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: raw borrows are not yet implemented
  --> $DIR/raw-ref-temp-deref.rs:16:27
   |
LL |     let index_deref_ref = &raw const ARRAY_REF[0];
   |                           ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: raw borrows are not yet implemented
  --> $DIR/raw-ref-temp-deref.rs:17:21
   |
LL |     let deref_ref = &raw const *SLICE_REF;
   |                     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: raw borrows are not yet implemented
  --> $DIR/raw-ref-temp-deref.rs:18:27
   |
LL |     let index_deref_ref = &raw const SLICE_REF[1];
   |                           ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: raw borrows are not yet implemented
  --> $DIR/raw-ref-temp-deref.rs:21:23
   |
LL |     let ascribe_ref = &raw const (x: i32);
   |                       ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: raw borrows are not yet implemented
  --> $DIR/raw-ref-temp-deref.rs:22:25
   |
LL |     let ascribe_deref = &raw const (*ARRAY_REF: [i32; 2]);
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: raw borrows are not yet implemented
  --> $DIR/raw-ref-temp-deref.rs:23:31
   |
LL |     let ascribe_index_deref = &raw const (ARRAY_REF[0]: i32);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/64490

error: aborting due to 9 previous errors

